WPB-20209 forward ip address of the remote from federator to component reapply (#4805)

--- a/services/nginz/integration-test/conf/nginz/common_response.conf
+++ b/services/nginz/integration-test/conf/nginz/common_response.conf
@@ -15,6 +15,9 @@
       proxy_set_header   Z-Conversation $zauth_conversation;
       proxy_set_header   Z-Timestamp    $zauth_timestamp;
       proxy_set_header   Request-Id     $request_id;
+      # Forward client IP information to upstreams
+      # NOTE: Leave X-Forwarded-For untouched; add full chain for tests
+      proxy_set_header   X-Forwarded-For $xff_with_client;
 
       # NOTE: This should only be used on endpoints where credentials are needed
       more_set_headers 'Access-Control-Allow-Credentials: true';
