--- a/charts/reaper/values.yaml
+++ b/charts/reaper/values.yaml
@@ -2,7 +2,7 @@ image:
   # Use a kubectl image that includes a shell (sh/bash). Distroless images will fail to exec the script.
   registry: docker.io
   repository: bitnamilegacy/kubectl
-  tag: v1.32.9
+  tag: 1.32.9
 podSecurityContext:
   allowPrivilegeEscalation: false
   capabilities:
