--- a/charts/restund/values.yaml
+++ b/charts/restund/values.yaml
@@ -11,9 +11,10 @@ image:
   tag: ""
 
 kubectlImage:
-  registry: registry.k8s.io
-  repository: kubectl
-  tag: v1.32.9
+  # Use a kubectl image that includes a shell (sh/bash). Distroless images will fail to exec the script.
+  registry: docker.io
+  repository: bitnamilegacy/kubectl
+  tag: 1.32.9
 
 # If you have multiple deployments of Restund running in one cluster, it is
 # important that they run on disjoint sets of nodes, you can use nodeSelector to enforce this
