--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,8 +32,7 @@ jobs:
               CURRENT_BRANCH="${GITHUB_REF#refs/heads/}"
           fi
 
-          sed -i "s|url = https://github.com/wireapp/wire-server.git|url = ${CURRENT_REPO_URL}|g" .gitmodules
-          sed -i "s|branch = clean-wire-server-docs|branch = ${CURRENT_BRANCH}|g" .gitmodules
+          git config -f .gitmodules submodule.wire-server.branch ${CURRENT_BRANCH}
           
           cat .gitmodules
           make build
