refactor: create `Wire.Qualified.Utils`

--- a/libs/wire-subsystems/wire-subsystems.cabal
+++ b/libs/wire-subsystems/wire-subsystems.cabal
@@ -244,6 +244,7 @@ library
     Wire.PropertyStore.Cassandra
     Wire.PropertySubsystem
     Wire.PropertySubsystem.Interpreter
+    Wire.Qualified.Utils
     Wire.RateLimit
     Wire.RateLimit.Interpreter
     Wire.Rpc
