refactor faor in inputQualifyLocal

--- a/libs/types-common/types-common.cabal
+++ b/libs/types-common/types-common.cabal
@@ -125,6 +125,7 @@ library
     , openapi3
     , optparse-applicative   >=0.10
     , pem
+    , polysemy
     , protobuf               >=0.2
     , QuickCheck             >=2.9
     , quickcheck-instances   >=0.3.16
