get user groups for multiple users

--- a/libs/wire-subsystems/wire-subsystems.cabal
+++ b/libs/wire-subsystems/wire-subsystems.cabal
@@ -119,6 +119,7 @@ common common-all
     , memory
     , mime
     , mime-mail
+    , monoidal-containers
     , network
     , network-conduit-tls
     , polysemy
