Push user notifications to Pulsar as well (gundeck)

--- a/services/gundeck/gundeck.cabal
+++ b/services/gundeck/gundeck.cabal
@@ -155,6 +155,7 @@ library
     , safe-exceptions
     , servant
     , servant-server
+    , supernova
     , text                                  >=1.1
     , these
     , time                                  >=1.4
