--- a/.github/workflows/build-zauth.yaml
+++ b/.github/workflows/build-zauth.yaml
@@ -16,19 +16,14 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-          target: aarch64-unknown-linux-gnu
+          target: aarch64-apple-darwin
           override: true
-
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gcc-aarch64-linux-gnu
 
       - name: Build zAuth for ARM64
         run: |
           make libzauth 
         env:
-          CARGO_BUILD_TARGET: aarch64
+          CARGO_BUILD_TARGET: aarch64-apple-darwin 
 
       - name: Upload zAuth binary as artifact
         uses: actions/upload-artifact@v4
