--- a/.github/workflows/build-zauth.yaml
+++ b/.github/workflows/build-zauth.yaml
@@ -19,6 +19,11 @@ jobs:
           target: aarch64-apple-darwin
           override: true
 
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc-aarch64-linux-gnu
+
       - name: Build zAuth for ARM64
         run: |
           make libzauth 
