fixup! WIP: build zauth binary for arm64

--- a/.github/workflows/build-zauth.yaml
+++ b/.github/workflows/build-zauth.yaml
@@ -9,20 +9,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Set up MacOS Cross Compiler
+        uses: Timmmm/setup-osxcross@v2
+        with:
+          osx-version: "15.6"
+
+      - name: Install Rustup targets
+        run: rustup target add x86_64-apple-darwin aarch64-apple-darwin
+
       - name: Checkout repository
         uses: actions/checkout@v3
-
-      - name: Set up Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: aarch64-apple-darwin
-          override: true
-
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gcc-aarch64-apple-darwin
 
       - name: Build zAuth for ARM64
         run: |
