Add Spar.Scim.Group module.
Create scim user group in subsystem.

createScimGroupImpl (wip)

Unit tests, mostly.

More unit test stuff.

Test works: create scim user group, get it back.

Add failing unit test (no non-scim users in scim groups).

Make unit test pass (wip).

Add pending test case for getScimGroup.

Tweak probability distribution over test cases.

Fix typo

Better name for effect action.

Connect scim subsystem to api in spar. (wip)

rm unused library import in spar.cabal

update obsolete comment

hook scim subsystem into spar.  (wip)

Extend spar env to handle scim subsystem. (wip)

drive-by refactoring.

ScimSubsystem error handling in spar.

Fixup

Add effects to spar: GalleyAPIAccess, TeamSubsystem

Removed TODO (this is not what we should focus on!)

Fill in more effects in Spar.CanonicalInterpreter.

Add {user,auth}subsystem to spar.

Entire code base: rework error handling [WIP]

fixup

check point: spar compiles with undefineds

fix: complete most of the interpreters

Blindly fix some compiler errors.

Transplanting AWS code out of brig into wire-subsystems [WIP]

fix: Wire.EmailSending.Core

fail with strategy

fix: Wire.EmailSending.Core & Wire.AWSSubsystem.AWS

fix: bind AWSSubsystem

refactor: migrate Queue/DeleteQueue

refactor: move Events

refactor: move more stuff and complete the interpreters stack

start fetching options (missing ES)

ES binding

fix: missing config

fix: integration test config

fix: deduplicate resources

...

--- a/charts/spar/templates/configmap.yaml
+++ b/charts/spar/templates/configmap.yaml
@@ -29,6 +29,19 @@ data:
       tlsCa: /etc/wire/spar/cassandra/{{- (include "tlsSecretRef" . | fromYaml).key }}
       {{- end }}
 
+    elasticsearch:
+      url: {{ .elasticsearch.scheme }}://{{ .elasticsearch.host }}:{{ .elasticsearch.port }}
+      index: {{ .elasticsearch.index }}
+      insecureSkipVerifyTls: {{ .elasticsearch.insecureSkipVerifyTls }}
+      {{- if $.Values.secrets.elasticsearch }}
+      credentials: /etc/wire/spar/secrets/elasticsearch-credentials.yaml
+      {{- end }}
+      {{- if .elasticsearch.tlsCa }}
+      caCert: /etc/wire/spar/elasticsearch/ca.pem
+      {{- else if .elasticsearch.tlsCaSecretRef }}
+      caCert: /etc/wire/spar/elasticsearch/{{- .elasticsearch.tlsCaSecretRef.key }}
+      {{- end }}
+
     maxttlAuthreq: {{ .maxttlAuthreq }}
     maxttlAuthresp: {{ .maxttlAuthresp }}
 
