--- a/services/spar/spar.cabal
+++ b/services/spar/spar.cabal
@@ -52,6 +52,7 @@ library
     Spar.Schema.V9
     Spar.Scim
     Spar.Scim.Auth
+    Spar.Scim.Group
     Spar.Scim.Types
     Spar.Scim.User
     Spar.Sem.AReqIDStore
@@ -194,6 +195,7 @@ library
     , uri-bytestring
     , utf8-string
     , uuid
+    , vector
     , wai
     , wai-middleware-gunzip
     , wai-utilities
