Hack Pulsar usage into Cannon
This is really quick & dirty.

--- a/services/cannon/cannon.cabal
+++ b/services/cannon/cannon.cabal
@@ -23,6 +23,7 @@ library
     Cannon.App
     Cannon.Dict
     Cannon.Options
+    Cannon.PulsarConsumerApp
     Cannon.RabbitMq
     Cannon.RabbitMqConsumerApp
     Cannon.Run
@@ -85,6 +86,7 @@ library
     , api-field-json-th                     >=0.1.0.2
     , async                                 >=2.0
     , base                                  >=4.6     && <5
+    , base64
     , bilge                                 >=0.12
     , binary
     , bytestring                            >=0.10
@@ -108,6 +110,7 @@ library
     , metrics-wai                           >=0.4
     , mwc-random                            >=0.13
     , prometheus-client
+    , proto-lens
     , retry                                 >=0.7
     , safe-exceptions
     , servant-conduit
