Conversation.{Migration,Cassandra}: Ensure pending deletes from Cassandra are never read
Exception: Listing local conversation ids and listing team conversation ids

--- a/libs/wire-subsystems/wire-subsystems.cabal
+++ b/libs/wire-subsystems/wire-subsystems.cabal
@@ -192,6 +192,8 @@ library
     Wire.ConversationStore.Cassandra.Instances
     Wire.ConversationStore.Cassandra.Queries
     Wire.ConversationStore.Migration
+    Wire.ConversationStore.Migration.Cleanup
+    Wire.ConversationStore.Migration.Types
     Wire.ConversationStore.MigrationLock
     Wire.ConversationStore.MLS.Types
     Wire.ConversationStore.Postgres
