Align kubectl images with available tags (#4801)
* chore: align kubectl images with available tags
reaper now uses registry.k8s.io/kubectl:v1.32.9 (with the registry’s required v prefix)
restund falls back to docker.io/bitnamilegacy/kubectl:1.24.12 since registry.k8s.io no longer ships that version

* update kubectl image for restund
- use registry.k8s.io for kubectl image with version v1.32.9

* update changelog.d

* use bitnamilegacy kubectl which includes shell

* restund also requires kubectl with shell access

* update changelog.d text

--- a/charts/restund/values.yaml
+++ b/charts/restund/values.yaml
@@ -10,6 +10,12 @@ image:
   # overwrite the tag here, otherwise `appVersion` of the chart will be used
   tag: ""
 
+kubectlImage:
+  # Use a kubectl image that includes a shell (sh/bash). Distroless images will fail to exec the script.
+  registry: docker.io
+  repository: bitnamilegacy/kubectl
+  tag: 1.32.9
+
 # If you have multiple deployments of Restund running in one cluster, it is
 # important that they run on disjoint sets of nodes, you can use nodeSelector to enforce this
 nodeSelector: {}
