--- a/services/spar/spar.cabal
+++ b/services/spar/spar.cabal
@@ -167,6 +167,7 @@ library
     , crypton-x509
     , exceptions
     , extended
+    , hasql-pool
     , hscim
     , hspec
     , http-types
@@ -200,8 +201,10 @@ library
     , wai-utilities
     , warp
     , wire-api
+    , wire-api-federation
     , wire-subsystems
     , yaml
+    , zauth
 
   default-language:   Haskell2010
 
