Test channel search

--- a/integration/integration.cabal
+++ b/integration/integration.cabal
@@ -122,6 +122,7 @@ library
     Test.Cargohold.Metrics
     Test.Cells
     Test.Channels
+    Test.ChannelSearch
     Test.Client
     Test.Connection
     Test.Conversation
