--- a/libs/hscim/hscim.cabal
+++ b/libs/hscim/hscim.cabal
@@ -6,7 +6,9 @@ description:
   The README file will answer all the questions you might have
 
 category:           Web
-homepage:           https://github.com/wireapp/wire-server/libs/hscim/README.md
+homepage:
+  https://github.com/wireapp/wire-server/blob/develop/libs/hscim/README.md
+
 bug-reports:        https://github.com/wireapp/wire-server/issues
 author:             Wire Swiss GmbH
 maintainer:         Wire Swiss GmbH <backend@wire.com>
@@ -21,7 +23,7 @@ extra-source-files:
 source-repository head
   type:     git
   location: https://github.com/wireapp/wire-server
-  subdir:   hscim
+  subdir:   libs/hscim
 
 library
   exposed-modules:
