--- a/charts/galley/templates/configmap.yaml
+++ b/charts/galley/templates/configmap.yaml
@@ -26,6 +26,7 @@ data:
       {{- end }}
 
     postgresql: {{ toYaml .postgresql | nindent 6 }}
+    postgresqlPool: {{ toYaml .postgresqlPool | nindent 6 }}
     {{- if hasKey $.Values.secrets "pgPassword" }}
     postgresqlPassword: /etc/wire/galley/secrets/pgPassword
     {{- end }}
