--- a/services/brig/brig.integration.yaml
+++ b/services/brig/brig.integration.yaml
@@ -26,6 +26,12 @@ postgresql:
   dbname: backendA
   password: posty-the-gres
 
+postgresqlPool:
+  size: 20
+  acquisitionTimeout: 10s
+  agingTimeout: 1d
+  idlenessTimeout: 10m
+
 rabbitmq:
   host: 127.0.0.1
   port: 5671
