fixup! Filter users in `GET /teams/:tid/member` by whether user is searchable
- use a lookup for users
- log not found users as error

--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -348,6 +348,7 @@ library
     , types-common-aws
     , types-common-journal                  >=0.1
     , unliftio                              >=0.2
+    , unordered-containers
     , uri-bytestring                        >=0.2
     , utf8-string
     , uuid                                  >=1.3
