integration: Mvoe migration test to another module

--- a/integration/integration.cabal
+++ b/integration/integration.cabal
@@ -126,6 +126,7 @@ library
     Test.Client
     Test.Connection
     Test.Conversation
+    Test.Conversation.Migration
     Test.Demo
     Test.DNSMock
     Test.DomainVerification
