--- a/services/brig/brig.integration.yaml
+++ b/services/brig/brig.integration.yaml
@@ -147,8 +147,8 @@ emailSMS:
     tMemberWelcomeUrl: http://127.0.0.1:8080/member-welcome-website
 
 zauth:
-  privateKeys: test/resources/zauth/privkeys.txt
-  publicKeys: test/resources/zauth/pubkeys.txt
+  privateKeys: ../../libs/wire-subsystems/test/resources/zauth/privkeys.txt
+  publicKeys: ../../libs/wire-subsystems/test/resources/zauth/pubkeys.txt
   authSettings:
     keyIndex: 1
     userTokenTimeout: 120
@@ -167,7 +167,7 @@ turn:
   # discoveryIntervalSeconds: 10
 
   # This should be the same secret as used by the TURN servers
-  secret: test/resources/turn/secret.txt
+  secret: ../../libs/wire-subsystems/test/resources/turn/secret.txt
   configTTL: 3600
   tokenTTL: 21600
 
